# AI_ATTENDANCE

./: .gitignore  Dockerfile  pyproject.toml  test.ipynb
backend/app/: config.py  data_store.py  main.py
backend/app/ml/: __init__.py  anomaly_detector.py  cluster_model.py  risk_model.py
backend/app/services/: ai_predictions.py  alerts.py  analysis.py  filter_service.py  filters.py  generation_service.py  insight_service.py  prediction_service.py  predictions.py  report_service.py  reports.py
backend/app/utils/: alerts_utils.py  check.py  generate_insights.py  generate_recommendations.py  loader.py  logger.py  model_file_utils.py  preprocessing.py
backend/classes/: AnalysisResponse.py  AnalysisSearchCriteria.py  AttendanceValues.py  DataRequest.py  DataResponse.py  District.py  DownloadReportCriteria.py  FilterCriteria.py  FilterOptions.py  GradeResponse.py  GradeRiskItem.py  GradeRiskResponse.py  KeyInsight.py  Recommendation.py  School.py  SchoolOption.py  SchoolResponse.py  SchoolRiskItem.py  SchoolRiskResponse.py  Student.py  StudentMetrics.py  StudentTrend.py  StudentsResponse.py  SummaryStatistics.py  ValueLabelPair.py
frontend/: package-lock.json  package.json
frontend/alerts/: README.md  package-lock.json  package.json
frontend/alerts/config/: app.ts
frontend/alerts/contexts/: AuthContext.tsx
frontend/alerts/lib/: axios.ts
frontend/alerts/pages/: AlertsDashboard.tsx  Index.tsx  components.tsx  reducer.ts  utils.ts
frontend/predictions/: package-lock.json  vite.config.ts
frontend/public/: web.config
frontend/src/: App.tsx
(+37 files in other folders)
